Bug: project <a> link proper spacing above

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -185,7 +185,7 @@ p {
 
   #projects {
     // Project <a> link leaves small gap at top, looks nice
-    padding-top: 2rem;
+    padding-top: 5rem;
 
     h1 {
       margin-bottom: 5rem;
